--- a/style/style.css
+++ b/style/style.css
@@ -1028,11 +1028,25 @@ footer a.footer-mail {
     height: 100vh;
     display: flex;
     flex-flow: column;
+    justify-content: center;
+    align-items: center;
 }
 .ante-title {
     color: #fff;
-    font-size: 100px;
-    margin-bottom: 40px;
+    font-size: 80px;
+    margin-bottom: 80px;
+    text-align: center;
+}
+.ante a {
+    text-decoration: none;
+    text-align: center;
+    font-size: 40px;
+    color: #aaa;
+    margin-bottom: 20px;
+    display: inline-block;
+}
+.ante a:hover {
+    color: #fff;
 }
 
 @media screen and (max-width: 1366px){
