--- a/style/style.css
+++ b/style/style.css
@@ -321,7 +321,7 @@ textarea {
     width: 100%;
     display: flex;
     justify-content: center;
-    height: 0;
+    height: 30px;
     margin-bottom: 0;
     opacity: 0;
     transition: height 2s ease,margin-bottom 2s ease;
@@ -337,7 +337,7 @@ textarea:focus {
 .textarea-input {
     background-color: #f5f5f5;
     border-bottom: 1px solid #d6d6d6;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     transition: border-color 0.3s ease;
 }
 .submit-button {
